# template-aqa-project

./: .env.example  .gitignore  conftest.py  pyproject.toml  requirements.txt
src/ui/fixtures/: page.py  user_auth.py
src/ui/pages/: base_page.py  login_page.py
src/ui/tools/: __init__.py  assertions.py  constants.py  helpers.py
src/utils/tools/: __init__.py  constants.py
